[do not merge] fix wrapping behaviour for buttons at the end of xui-pageheading
In this situation, overrides have been required to stop buttons from using `width: `100%` at narrow breakpoint. Without overrides, it's difficult to predict how the buttons will act, and when things such as the carret will wrap.

Additionally, `flex-flow: row wrap` has been added to `xui-pagheading--content` as it seemed better for the buttons/other content to wrap down to the next row before the breadcrumbs wrapped down to multiple lines.

--- a/src/sass/objects/_navigation.subapp.scss
+++ b/src/sass/objects/_navigation.subapp.scss
@@ -18,12 +18,12 @@
 // <header class="xui-pageheading">
 //   <div class="xui-pageheading--content xui-page-width-standard">
 //     <h1 class="xui-pageheading--title">Sales</h1>
-//     <div>
-//        <button type="button" class="xui-button xui-button-standard">
+//     <div class="xui-actions">
+//        <button type="button" class="xui-button xui-button-standard" style="width:initial">
 //           Options
 //           <span class="xui-button--caret"></span>
 //        </button>
-//        <button type="button" class="xui-button xui-button-create">
+//        <button type="button" class="xui-button xui-button-create xui-margin-left-sm" style="width:initial">
 //           New
 //           <span class="xui-button--caret"></span>
 //        </button>
@@ -38,8 +38,8 @@
 //         <li class="xui-breadcrumb active" aria-selected="true">Invoices</li>
 //      </ol>
 //      <div class="xui-buttongroup">
-//         <button type="button" class="xui-button xui-button-grouped xui-button-create">New Invoice</button>
-//         <button type="button" class="xui-button xui-button-grouped xui-button-create xui-button-split">
+//         <button type="button" class="xui-button xui-button-grouped xui-button-create" style="width:initial">New Invoice</button>
+//         <button type="button" class="xui-button xui-button-grouped xui-button-create xui-button-split" style="width:initial;">
 //            <span class="xui-button--caret"></span>
 //         </button>
 //      </div>
@@ -53,7 +53,7 @@
 //         <li class="xui-breadcrumb" aria-selected="false"><a href="#">Invoices</a></li>
 //         <li class="xui-breadcrumb active" aria-selected="true">INV-001</li>
 //       </ol>
-//      <button type="button" class="xui-button xui-button-standard">
+//      <button type="button" class="xui-button xui-button-standard" style="width:initial;">
 //         Options
 //         <span class="xui-button--caret"></span>
 //      </button>
@@ -114,6 +114,7 @@
 .#{$ns}-pageheading--content {
 	align-items: center;
 	display: flex;
+	flex-flow: row wrap;
 	justify-content: space-between;
 	margin-top: 0;
 }
